syntax = "proto3";

//引入其他协议
//import "common/header.proto";

//登陆服务器
option go_package="/login";

//0x100
message LoginReq{
    //用户id
    int32 userID = 1;
    //平台id
	int32 appID = 2;
    //平台账号
	string openID = 3;
    //密码
	string pwd = 4;
    //设备id
	string devID = 5;
    //设备名称
	string devName = 6;
}

message LoginResp{
    //登陆用户
    int32 userID = 2;
    //是否连接
	bool reconnected = 3;
    //连接服务器
	int32 serverID = 4;
    //连接房间/地图
    int32 roomID = 5;
}